# scriptize

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  LICENSE  README.md  index.html  install.sh  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bugfix.md  config.yml  feature.md
.github/workflows/: ci.yml
allure-action/main/allure-report/: data.json  lastRun.json
allure-action/main/allure-report/17392016154_1756782281480/: index.html
allure-action/main/allure-report/17508736249_1757125650086/: index.html
bash/: template.sh  template_standalone.sh
bash/docs/: alerts.md  alerts_api.md  arrays.md  debug.md  template_utils.md
bash/test/: arrays.bats  dates.bats
bash/utilities/: alerts.bash  arrays.bash  checks.bash  dates.bash  debug.bash  files.bash  macOS.bash  misc.bash  services.bash  strings.bash  template_utils.bash
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 17c42067113ec75e.json  17f5302a6980cd04.json  1d91f357f515bf5e.json  2258564e5eff243.json  248bf4f86f47742e.json  24b3ad2e8a5812d4.json  255aa3705a09b1b3.json  25ff2d71b26dbeab.json  2711875fd1d9810a.json  27153d756dac387c.json  27ab4a814294e2db.json  28c82eab7c306d67.json  28f9bd59051070ce.json  2af11ffa4f461fc8.json  2b8e288d99e8f690.json  2f7cd39c5cb9f13e.json  2fce475c8c84632f.json  305089028422fb79.json  33f598aa61907386.json  34f24ee66450e4bd.json  35af2b5045f725d4.json  381b01c063f420fa.json  3b56b17b10fa4c0.json  3be088d17b060569.json  3bf680688768fc2e.json  3e0f49dd8d0376cc.json  3e6cbf67d4a96f36.json  3eb1c545c541a3e.json  3f456d5c1e6cd86e.json  41343280ca18f69f.json  41c75946d1d63196.json  41de5202c65e38b9.json  42627246855a3214.json  42d4e6a5270da645.json  42e543253c2438f.json  440970f93f122a58.json  4603aec331fd7737.json  46524a3d84322187.json  493698109d475ee2.json  49477861a7640138.json  (+113 more)
docs/: index.md
docs/api/bash/: alerts.md  arrays.md  checks.md  dates.md  debug.md  files.md  macOS.md  misc.md  services.md  strings.md  template_utils.md
docs/api/python/: checks.md  files.md  log_manager.md  shell.md  strings.md
docs/assets/img/: scriptize_full_logo_horizontal.xcf  scriptize_single_logo.xcf
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  history-trend.json  history.json
logs/: app.log.json
python/: setup.py  template.py
python/lib/: logger.py
python/src/: __init__.py
python/src/utilities/: alerts.py  checks.py  files.py  log_manager.py  shell.py  strings.py
scriptize/: __init__.py  app.py
scriptize/assets/bash/: template.sh  template_standalone.sh
scriptize/assets/bash/sedfiles/: README.md
scriptize/assets/bash/test/: alerts.bats  checks.bats  debug.bats  files.bats  strings.bats  template_utils.bats
scriptize/assets/bash/utilities/: alerts.bash  arrays.bash  dates.bash  files.bash  macOS.bash  misc.bash  services.bash  template_utils.bash
scriptize/assets/python/: __init__.py  main.py
scriptize/assets/python/utilities/: __init__.py  checks.py  cli.py  files.py  log_manager.py  logging_config.json  shell.py  strings.py
scriptize/core/: __init__.py  builder.py  paths.py
scriptize/logger/: __init__.py  bash_logger.py  log_manager.py  logging_config.json
scriptize/utils/: new-script  shdoc
test/: __init__.py  conftest.py  e2e
test/allure/report/: index.html
test/allure/report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
test/allure/report/export/: influxDbData.txt  prometheusData.txt
test/allure/report/history/: history.json  retry-trend.json
test/allure/report/widgets/: behaviors.json  duration-trend.json  history-trend.json  severity.json  suites.json  (+2 more)
test/allure/reports/: index.html
test/allure/results/: 003d084b-6b34-4096-8612-976ae76e36a9-result.json  006d27d0-4fd7-4ed6-990d-01016630fcfa-result.json  0082eb25-8a39-4802-b2f9-2e6858056d4a-container.json  00b050ad-5812-4db1-baa4-b93c5690d5d2-result.json  00f3a4f9-589e-4dbe-a282-c45222482367-result.json  010cfe0f-a12b-412a-a5af-d16b199d1360-container.json  010f4f9f-4d92-4ce9-bc9b-86cad0864bdb-result.json  011f8958-d8c0-4928-872a-438e87c162ea-container.json  013f70a5-3b3b-43a9-8006-a2b2ec05e641-result.json  01711fdf-94ca-468f-bd8e-ac164f541240-result.json  0180b5f9-fc37-4d58-9779-616159e32d57-result.json  01aa3e92-d591-4fd6-a5ec-1632c5307f48-result.json  01ac6f42-a58d-4609-ab26-a52e6c071bad-container.json  01fe7f32-dc42-4e81-8084-7e1e2aaeae23-container.json  01ff01fc-0c76-433d-854f-ea63ff262483-container.json  0200e45c-c1de-4005-b04e-2fd684a41dfb-container.json  02178857-3852-4ec3-91aa-49c62d37bdb8-result.json  0238398f-b0dd-4af1-911b-0bda2a97f75b-result.json  0240f37b-cecc-4b53-8144-1499c942247b-container.json  02435add-c50a-4bb0-8616-5323cadb7010-container.json  025ce1bc-b85f-4f52-9de5-695e8b0ec71c-result.json  028b1701-4a11-4f85-96d5-20ef177b23e3-container.json  02b14e82-2c1c-49f3-857d-5de38798ea74-container.json  02c7bf26-3484-4551-99ea-81bcb2b20186-result.json  0323d10c-2d51-48cb-87ca-c89d541bff03-container.json  036d7b54-aa23-47ff-9003-66e3ab6794c3-result.json  03bb7498-e3a0-4458-9813-06abd9a92a7a-container.json  03c1e961-6639-4d2c-8b75-484d1135d66f-container.json  0425693b-a940-413f-9b02-9463883741c8-container.json  047099ab-eeb2-4385-93fa-7e4614f79115-container.json  0497c676-c166-4ea5-8482-f87ed53c8f8d-result.json  049db935-0c5d-4b5c-b5de-eba7c84f2186-container.json  04b260a2-e3e6-423c-979a-1d3c34f061e0-result.json  04bb09d3-6ed2-4180-864c-45ed9af83fc5-container.json  05246fff-a73e-4aed-9d4d-ab18162504e0-result.json  0587b3ff-5de4-4ad5-8c71-0426887189e6-result.json  05a5ce6c-ec51-4a4b-9422-c4ba9ceb5b7d-result.json  05afc26c-42f9-41a1-b5e9-1aaa21180f88-container.json  05eaa42a-6378-4dec-916e-2f092fcea3e6-container.json  060e296a-2c8d-42b2-a5c4-f5bc442e3e0a-container.json  (+1820 more)
test/scripts/: __init__.py  generate_executor.py
test/utilities/: test_checks.py  test_cli.py  test_files.py  test_shell.py
utils/: shdoc
widgets/: duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
(+1438 files in other folders)
